Update navbar layout and styling

--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -178,10 +178,9 @@
         <div class="container">
             <a class="navbar-brand" th:href="@{/}">
                 <i class="fas fa-university"></i>
-                <span>Anatomía Funcional</span>
+                <span>Anatomía Funcional - DEF</span>
             </a>
     
-
             <form th:action="@{/logout}" 
               method="post" 
               class="ms-auto" 
