Update navbar button styling and layout structure

--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -178,7 +178,7 @@
         <div class="container">
             <a class="navbar-brand" th:href="@{/}">
                 <i class="fas fa-university"></i>
-                <span>Anatomía Funcional - DEF</span>
+                <span>Anatomía Funcional</span>
             </a>
     
             <form th:action="@{/logout}" 
